Upgrade to Elm 0.19

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,16 @@
 language: node_js
+node_js: node
 
 os:
   - osx
 
-node_js:
-  - "node"
-
 env:
   global:
-    - ELM_VERSION=0.18.0
-    - ELM_TEST_VERSION=^0.18.2
+    - ELM_VERSION=0.19.0-bugfix2
+    - ELM_TEST_VERSION=^0.19.0-beta5
 
 install:
-  - npm install -g elm@$ELM_VERSION
-  - npm install -g elm-test@$ELM_TEST_VERSION
+  - npm install -g elm@$ELM_VERSION elm-test@$ELM_TEST_VERSION
 
 script:
-  - elm-package install -y
-  - make
-  - make test
+  - make all test
